--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.563.0",
     "react": "^19.2.3",
-    "@google/genai": "^1.38.0",
     "react-dom": "^19.2.3",
-    "d3": "^7.9.0"
+    "@google/genai": "^1.38.0",
+    "d3": "^7.9.0",
+    "lucide-react": "^0.563.0",
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
